py.install_sources(
  '__init__.py',
  'all.py',
  'finite_dynamical_system.py',
  'finite_dynamical_system_catalog.py',
  'surface_dynamics_deprecation.py',
  subdir: 'sage/dynamics',
)

subdir('arithmetic_dynamics')
install_subdir('cellular_automata', install_dir: sage_install_dir / 'dynamics')
subdir('complex_dynamics')
