python_sources = [
    '__init__.py',
    'app.py',
    'graph_theory.py',
    'linear_algebra.py',
    'Glossary/CollapsibleBox.py',
    'Glossary/Content.py',
    'Glossary/Glossary.py',
    'LinearAlgebra/Matrix_gui.py',
    'LinearAlgebra/matrix_app.py',
]

py.install_sources(
    python_sources,
    subdir: 'sage/gui'
)